fecdat/force-app/main/default/objects/FEC_In_Approval_Stage_Screen__c/FEC_In_Approval_Stage_Screen__c.object-meta.xml
<CustomObject>
    <description>Được sử dụng khi người dùng chỉnh sửa, cập nhật các tham số, điều kiện của màn hình từng quy trình xử lý</description>
    <label>In-Approval Stage Screen</label>
    <nameField>
        <displayFormat>SSN-{0}</displayFormat>
        <label>Stage Screen Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>In-Approval Stage Screens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>