fecdat/force-app/main/default/objects/FEC_In_Approval_Stage_Screen__c/fields/FEC_Case_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Stage</label>
    <referenceTo>FEC_Case_Stage__c</referenceTo>
    <relationshipLabel>In-Approval Stage Screens</relationshipLabel>
    <relationshipName>In_Approval_Stage_Screens</relationshipName>
    <type>Lookup</type>
</CustomField>