fecdat/force-app/main/default/objects/FEC_In_Approval_Stage_Screen__c/fields/FEC_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>